added controller comments 2